# TrueTTV_beta

./: Cargo.toml  README.md  bb_status.json  default.json  on_state.json  sb_status.json  sound_status.json  sound_status_temp
sounds/: angryscav.mp3.sfk
src/: bit_bot.rs  file_dialog.rs  get_color_codes.rs  main.rs  parse_config.rs  sound_bot.rs  sub_bot.rs  twitch_irc_sub_bot.rs  twitch_irc_sub_bot_complete.rs  twitch_reader.rs
