[package]
name = "TrueTTV_Beta"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
native-dialog = "0.6.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
twitch-irc = "4.0.0"
tokio = {version = "1", features = ["full"]}
mini-redis = "0.4"
winconsole = "0.11"
winput = "0.2.5"
rodio = "0.15.0"
futures = "0.3.24"

anyhow = "1.0.65"